--- a/css/carousel.css
+++ b/css/carousel.css
@@ -19,7 +19,7 @@ body {
 /* Since positioning the image, we need to help out the caption */
 .carousel-caption {
   z-index: 10;
-  bottom: 3rem;
+  bottom: 7rem;
   /*color: #5a5a5a;*/
 }
 
@@ -80,6 +80,7 @@ body {
   font-weight: 300;
   line-height: 1;
   letter-spacing: -.05rem;
+  margin-bottom: 2rem;
 }
 
 
